plugins/xpath/xpath-lang/testData/xpath/highlighting/scientificNotationNumber.xpath
<error descr="Number literals in scientific notation are not allowed in XPath 1.0">1.1e2</error>